force-app/main/default/objects/Agent_Prompt_Version__c/Agent_Prompt_Version__c.object-meta.xml
<CustomObject>
    <description
  >An immutable, numbered revision of an agent's system prompt. The version flagged Is_Active__c is the one AgentEngine resolves at run start; Agent_Definition__mdt.SystemPrompt__c is only the packaged baseline used when an agent has no versions.</description>
    <label>Agent Prompt Version</label>
    <nameField>
        <displayFormat>APV-{0000}</displayFormat>
        <label>Agent Prompt Version Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agent Prompt Versions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>