force-app/main/default/objects/Agent_Prompt_Version__c/fields/Active_Key__c.field-meta.xml
<CustomField>
    <fullName>Active_Key__c</fullName>
    <description
  >Service-maintained uniqueness key: set to Agent__c when Is_Active__c is true, null otherwise. A unique index ignores nulls, so this guarantees at most one active version per agent at the database level. Do not edit by hand.</description>
    <inlineHelpText
  >Maintained automatically. Enforces one active version per agent.</inlineHelpText>
    <label>Active Key</label>
    <length>120</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>