force-app/main/default/objects/Agent_Prompt_Version__c/fields/Agent__c.field-meta.xml
<CustomField>
    <fullName>Agent__c</fullName>
    <description
  >DeveloperName of the Agent_Definition__mdt this prompt version belongs to. Loose text rather than a relationship, matching Agent_Run__c.Agent__c — custom metadata cannot be the target of a lookup.</description>
    <externalId>true</externalId>
    <inlineHelpText
  >DeveloperName of the agent definition this version belongs to.</inlineHelpText>
    <label>Agent</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>