force-app/main/default/objects/Agent_Prompt_Version__c/fields/Change_Note__c.field-meta.xml
<CustomField>
    <fullName>Change_Note__c</fullName>
    <description
  >The author's short explanation of what changed in this version and why.</description>
    <inlineHelpText
  >Why this version exists — what you changed and what you expected it to improve.</inlineHelpText>
    <label>Change Note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>