force-app/main/default/objects/Agent_Prompt_Version__c/fields/Config_Snapshot_Json__c.field-meta.xml
<CustomField>
    <fullName>Config_Snapshot_Json__c</fullName>
    <description
  >Informational JSON snapshot taken at publish time: LLM provider, max steps, memory config and the granted tool DeveloperNames. Recorded so a past run can be explained; never replayed by the engine.</description>
    <inlineHelpText
  >Read-only record of the agent's configuration when this version was published. Not replayed on run.</inlineHelpText>
    <label>Config Snapshot JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>