force-app/main/default/objects/Agent_Prompt_Version__c/fields/Goal__c.field-meta.xml
<CustomField>
    <fullName>Goal__c</fullName>
    <description
  >Snapshot of the agent's Goal__c at the time this version was published. Immutable once Published.</description>
    <inlineHelpText
  >The agent's goal description as it stood when this version was published.</inlineHelpText>
    <label>Goal</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>