force-app/main/default/objects/Agent_Prompt_Version__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >The single version AgentEngine resolves for this agent. Maintained by PromptVersionService.activate; at most one active version per agent is enforced by the unique Active_Key__c field.</description>
    <inlineHelpText
  >Checked on the one version currently used for new runs. Use the Agent Builder to activate a version rather than editing this directly.</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>