force-app/main/default/objects/Agent_Prompt_Version__c/fields/Published_At__c.field-meta.xml
<CustomField>
    <fullName>Published_At__c</fullName>
    <description
  >When this version moved from Draft to Published and became immutable. Null while still a draft.</description>
    <inlineHelpText>When this version was published.</inlineHelpText>
    <label>Published At</label>
    <type>DateTime</type>
</CustomField>