force-app/main/default/objects/Agent_Prompt_Version__c/fields/Source_Version__c.field-meta.xml
<CustomField>
    <fullName>Source_Version__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description
  >The version this one was cloned or restored from, giving each version a traceable lineage. Null for a version authored from scratch.</description>
    <inlineHelpText>The earlier version this one was based on.</inlineHelpText>
    <label>Source Version</label>
    <referenceTo>Agent_Prompt_Version__c</referenceTo>
    <relationshipLabel>Derived Versions</relationshipLabel>
    <relationshipName>Derived_Versions</relationshipName>
    <type>Lookup</type>
</CustomField>