force-app/main/default/objects/Agent_Prompt_Version__c/fields/System_Prompt__c.field-meta.xml
<CustomField>
    <fullName>System_Prompt__c</fullName>
    <description
  >The versioned system prompt body. Immutable once the version is Published — see the Published_Versions_Are_Immutable validation rule.</description>
    <inlineHelpText
  >Base instructions sent to the LLM. Cannot be edited once published; save a new version instead.</inlineHelpText>
    <label>System Prompt</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>