force-app/main/default/objects/Agent_Prompt_Version__c/fields/Version_Key__c.field-meta.xml
<CustomField>
    <fullName>Version_Key__c</fullName>
    <description
  >Service-maintained uniqueness key of the form "&lt;Agent__c&gt;#&lt;Version_Number__c&gt;". Catches concurrent publishes that would otherwise assign the same version number twice. Do not edit by hand.</description>
    <inlineHelpText
  >Maintained automatically. Enforces unique version numbers within an agent.</inlineHelpText>
    <label>Version Key</label>
    <length>120</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>