force-app/main/default/objects/Agent_Prompt_Version__c/fields/Version_Number__c.field-meta.xml
<CustomField>
    <fullName>Version_Number__c</fullName>
    <description
  >Per-agent version number, 1-based. Assigned by PromptVersionService.nextVersionNumber; uniqueness within an agent is enforced by Version_Key__c.</description>
    <inlineHelpText
  >Version number within this agent, starting at 1.</inlineHelpText>
    <label>Version Number</label>
    <precision>9</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>