force-app/main/default/objects/Agent_Prompt_Version__c/validationRules/Published_Versions_Are_Immutable.validationRule-meta.xml
<ValidationRule>
    <fullName>Published_Versions_Are_Immutable</fullName>
    <active>true</active>
    <description
  >A version only means something if it cannot change after the fact. Uses PRIORVALUE so the Draft-to-Published transition and the Published-to-Archived transition are both still allowed; only editing the body of an already-frozen version is blocked.</description>
    <errorConditionFormula>AND(
  OR(
    ISPICKVAL(PRIORVALUE(Status__c), &quot;Published&quot;),
    ISPICKVAL(PRIORVALUE(Status__c), &quot;Archived&quot;)
  ),
  OR(
    ISCHANGED(System_Prompt__c),
    ISCHANGED(Goal__c),
    ISCHANGED(Version_Number__c)
  )
)</errorConditionFormula>
    <errorMessage
  >This prompt version is already published and cannot be edited. Save a new version instead.</errorMessage>
</ValidationRule>